argo-helm-apps-shared/gatekeeper-constraints/templates/requiredLabels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: all-must-have-label
spec:
  match:
    scope: Namespaced
    namespaces: ["dev", "qa", "prod"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod","Service","Deployment"]
  parameters:
    message: "All pods, services and deployments must have `team` and `tech` labels"
    labels:
      - key: team
        allowedRegex: "(.|\\s)*\\S(.|\\s)*"
      - key: tech
        allowedRegex: "(.|\\s)*\\S(.|\\s)*"
